# PulseCoreLite

./: .eslintrc.cjs  .gitattributes  .gitignore  .taurignore  PulseCore_全方位优化计划报告.md  README.md  index.bak.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  taskbar.html  toolkit.html  tsconfig.json  use.md  version.md  vite.config.ts  vitest.config.ts
design/: screen.html
docs/: README.bak.md  ToolkitPanel_Collection.md  Vue3_Components_Rule.md  create-version-note.md  native-taskbar-monitor-design.md  profile-20260305-145909-report.md  pulsecorelite-config-2026-03-13T02-30-44-785Z.json  ui-button-style-rules.md  version.md  webview-memory-70pct-plan.md  游戏算法评分.md  硬件评分权重评估报告.md  算法2.0.md
plan/: PulseCoreLite_v1.0.0_20260214_tuning.md  profile-20260303-083038_性能分析报告.md
scripts/: component-contract-check.mjs  dev-runner.mjs  fetch-launchers.ps1  pack-release.ps1  perf-baseline.json  perf-regression.mjs  release.ps1  sync-tauri-window.mjs
src/: App.vue  main.css  main.ts  style.bak.css  style.css  taskbar.css  taskbar.ts  toolkit.css  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/profile-data/: taskbar-profile-20260302-002942.jsonl
src-tauri/src/: app.rs  local_ai.rs  main.rs  native_taskbar.rs  profiler.rs  startup_items.rs  state.rs  system_tools.rs  tray.rs  types.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/collectors/: system_collector.rs
src-tauri/src/core/device_info/: mod.rs
src-tauri/src/ipc/: commands.rs  game_sync.rs  mod.rs  steam_market.rs
(+275 files in other folders)
