[package]
name = "pulsecorelite"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sysinfo = "0.33.1"
tauri = { version = "2.5.5", features = [] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

